assets/css/index.css
html {
  font-family: sans-serif;
}

.header {
  color: #000;
  background-color: #00e676;
  height: 60px;
  font-size: 24px;
  position: fixed;
  width: 100%;
  z-index: 1;
}

.right {
  text-align: right;
}

.header a {
  color: #000;
}

.inline-list {
  list-style-type: none;
}

.inline-list li {
  display: inline-block;
}

#content {
  padding-top: 60px;
}

